<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/imie1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pole1"
        app:layout_constraintBottom_toBottomOf="@+id/imie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/imie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pole2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imie1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nazwisko1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pole3"
        app:layout_constraintBottom_toBottomOf="@+id/nazwisko"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imie" />

    <EditText
        android:id="@+id/nazwisko"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pole4"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nazwisko1"
        app:layout_constraintTop_toBottomOf="@+id/imie" />

    <TextView
        android:id="@+id/liczba1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pole5"
        app:layout_constraintBottom_toBottomOf="@+id/liczba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nazwisko" />

    <EditText
        android:id="@+id/liczba"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pole6"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/liczba1"
        app:layout_constraintTop_toBottomOf="@+id/nazwisko" />

    <TextView
        android:id="@+id/srednia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="jakis tekst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liczba"
        android:visibility="gone" />

    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pole7"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/srednia" />

</androidx.constraintlayout.widget.ConstraintLayout>